--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -92,14 +92,37 @@ header
 	width: 100%
 	height: 110px
 	// background-color: rgb(184, 184, 184)
-	background-color: rgb(117, 117, 117)
+	//background-color: rgb(117, 117, 117)
 	//border-radius 0px 0px 20px 20px
 	// background-image: href="img/Header_Photo/B (1).jpeg"
+	position: relative;
+	overflow: hidden; 
+	//background-size: cover;
+	//background-size: 100%
+	//background-color: rgba(255, 255, 255, 0.2);
 
 
-.bg-fone-header
-	background-image: url("img/Header_Photo/B (1).jpeg");
-	filter: blur(5px);
+
+// .bg-fone-header
+// 	background-image: url("img/Header_Photo/B (1).jpeg");
+// 	filter: blur(5px);
+
+// 1, 7, 9, 11, 15, 16
+// 7 9 10 15 16 17 20 
+
+header::before 
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-image: url("img/Header_Photo/B (1).jpg");
+	background-position: center;
+	background-size: cover;
+	//background-color: rgba(255, 255, 255, 0.1);
+	filter: blur(3px);
+	z-index: -1; /* Это поместит фоновое изображение под содержимое блока */
 
 .head-bottom-line
 	width: 100%
@@ -107,13 +130,59 @@ header
 	background: linear-gradient(to right, #20f00d, #21d111);
 	//background: linear-gradient(to right, #2dff1a, #21c012);
 
+.bg1::before 
+	background-image: url("img/Header_Photo/B (1).jpg");
+.bg2::before 
+	background-image: url("img/Header_Photo/B (2).jpg");
+.bg3::before 
+	background-image: url("img/Header_Photo/B (3).jpg");
+.bg4::before 
+	background-image: url("img/Header_Photo/B (4).jpg");
+.bg5::before 
+	background-image: url("img/Header_Photo/B (5).jpg");
+.bg6::before 
+	background-image: url("img/Header_Photo/B (6).jpg");
+.bg7::before 
+	background-image: url("img/Header_Photo/B (7).jpg");
+.bg8::before 
+	background-image: url("img/Header_Photo/B (8).jpg");
+.bg9::before 
+	background-image: url("img/Header_Photo/B (9).jpg");
+.bg10::before 
+	background-image: url("img/Header_Photo/B (10).jpg");
+.bg11::before 
+	background-image: url("img/Header_Photo/B (11).jpg");
+.bg12::before 
+	background-image: url("img/Header_Photo/B (12).jpg");
+.bg13::before 
+	background-image: url("img/Header_Photo/B (13).jpg");
+.bg14::before 
+	background-image: url("img/Header_Photo/B (14).jpg");
+.bg15::before 
+	background-image: url("img/Header_Photo/B (15).jpg");
+.bg16::before 
+	background-image: url("img/Header_Photo/B (16).jpg");
+.bg17::before 
+	background-image: url("img/Header_Photo/B (17).jpg");
+
+
+
+
+
 .head-title
 	p
 		font-size: 35px
 		color: white
+		font-weight: bold
+		//color black
 		text-align: center
 		margin: 10px
 		padding-top 15px
+		//border: 1px solid black;
+		//text-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5)
+		text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+		//border: 2px solid black; /* Это добавит черную границу вокруг текста */
+		//padding: 10px;
 
 // Конкретно этот код делает хедер с отступами и закруглёнными углами:
 header
