3 - Добавил 2 кнопки навигации сверху

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -7,10 +7,17 @@ html
       div.bg-fone-header
       div.head-title
         p Подбор растений для дома
-      div.nav-button
+      
       div.head-bottom-line
 
   body 
+    .nav-button
+      .butt-info 
+        p.sss ℹ️ 
+        p Информация о проекте и его создателях
+      .butt-all-pants
+        p.sss🪴 
+        p Все растения
 
     //.asd1
       .h1 
