--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -223,7 +223,7 @@ body
 	height: auto
 	margin: 20px
 	border-radius: 15px
-	margin-top: 32px
+	margin-top: 17px
 	// display: flex;
 	// justify-content: center;
 	// flex-direction: column;
@@ -312,3 +312,68 @@ body
 // ------------------------------------- // 
 
 //.block-qu-1
+
+
+
+// ----------------------------- //
+// 		 Кнопки навигации:	     //
+// ----------------------------- // 
+
+.nav-button
+	width 100%
+
+// Широкие экраны (десктоп)
+@media (min-width: 950px) 
+	.nav-button
+		width: 871px
+
+.nav-button
+	height 65px
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	justify-items: center;
+	align-items: center;
+	//grid-template-columns: auto auto;
+	//bord()
+	margin-top: 15px
+	//padding auto 10px
+
+.butt-info, .butt-all-pants
+	font-style: italic;
+	// width 200px
+	// height 55px
+	width 95%
+	height 80%
+	border-radius: 10px
+	background white
+	p
+		font-size: 17px
+		text-align: center
+		//bord()
+		//height 100%
+		margin-top 2px
+
+.butt-info:hover, .butt-all-pants:hover
+	letter-spacing: 0.025em;
+	//font-style: italic;
+
+.butt-info:hover
+	border solid 4px #2078fc
+
+.butt-all-pants:hover
+	font-weight: bold
+	border solid 4px #20f00d
+
+.butt-info 	
+	justify-self: start
+	
+
+.butt-all-pants 
+	justify-self: end
+	
+.sss
+	font-style: normal
+	font-weight: none
+	display: inline
+	margin 0px
+	padding 0px
