--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -13,10 +13,10 @@ html
   body 
     .nav-button
       .butt-info 
-        p.sss ℹ️ 
+        //p.sss ℹ️ 
         p Информация о проекте и его создателях
       .butt-all-pants
-        p.sss🪴 
+        //p.sss🪴 
         p Все растения
 
     //.asd1
@@ -34,8 +34,14 @@ html
           p.pp3 Ну что, вы готовы <b>начинать?</b> 🚀
           div.butt-start
             p Запустить 
-      .block-qu-1
-        p Обычный блок, с вопросом
+      .block-qu#block-a
+        p.qu-answ Вы будете выращивать растения дома, или на улице?
+        p.letter-abbr a
+        .butt-bar
+          .butt-answ.answ-block-1
+            p Дома
+          .butt-answ.answ-block-2
+            p На улице
 
   footer 
     p made by 
