--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -244,7 +244,7 @@ body
 	height calc(100% - 15px);
 	//margin-left: 5px
 
-.descr-qu-1, .block-qu-1      // <-- Вот здесь также стили для обычного блока
+.descr-qu-1, .block-qu      // <-- Вот здесь также стили для обычного блока
 	text-align: center
 	background-color: white
 	border-radius: 15px
@@ -311,9 +311,69 @@ body
 // 		 Стили для обычного блока:	     //
 // ------------------------------------- // 
 
-//.block-qu-1
+// Нужно создать макет блока с вопросом
+// И сделать все блоки, верно их промаркировав
 
+// Затем перенести в JS логику их появления
+// Там пописать обработку нажатия на кнопки
 
+.block-qu
+	height auto
+	display: grid;
+	//grid-template-columns: 1fr 1fr;
+	grid-template-rows: auto auto
+	justify-items: center;
+	align-items: center;
+	position: relative;
+
+.butt-bar // Блок для кнопок
+	grid-row: 2;
+	//bord()
+	display: grid;
+	width 90%
+	height auto
+	margin-bottom: 25px
+
+.butt-answ // Стили для всех кнопок
+	//box-sizing: border-box;
+	//box-sizing: content-box;
+	//border solid yellow 1px
+	border-radius: 10px
+	margin: 0px 30px
+	padding: 0px
+	background color4
+	border 3px white solid
+	p
+		margin: 10px
+		padding: 0px
+
+.butt-answ:hover
+	filter: brightness(135%);
+
+.butt-answ:active
+	//filter: invert(100%);
+	//bord()
+	font-weight: bold
+	//font-style: italic
+	border solid 3px black
+
+.answ-block-1
+	grid-column: 1;
+
+.answ-block-2
+	grid-column: 2;
+
+.answ-block-3
+	grid-column: 3;
+
+.answ-block-4
+	grid-column: 4;
+
+.letter-abbr
+	position: absolute;
+	top: -10;
+	left: 0;
+	
 
 // ----------------------------- //
 // 		 Кнопки навигации:	     //
