5 - 8.11.2023 - Сверстал 4 блока с вопросами, разбираюсь с полем ввода

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -42,6 +42,32 @@ html
             p Дома
           .butt-answ.answ-block-2
             p На улице
+      .block-qu#block-a-1
+        p.qu-answ Какая наименьшая температура бывает в вашем регионе?
+        p.letter-abbr a-1
+        .butt-bar
+          .butt-answ.answ-block-1
+            p [Поле ввода]
+          .butt-answ.answ-block-2
+            p Не имеет значения, так как я планирую выращивать растения летом
+      .block-qu#block-a-2
+        p.qu-answ Какая средняя температура в вашем доме?
+        p.letter-abbr a-2
+        .butt-bar
+          .butt-answ.answ-block-1
+            p [Поле ввода]
+      .block-qu#block-a-2-1
+        p.qu-answ Какая примерная влажность в вашем доме?
+        p.letter-abbr a-2-1
+        .butt-bar
+          .butt-answ.answ-block-1-s
+            p [Поле ввода]
+          .butt-answ.answ-block-2-s
+            p Сухо
+          .butt-answ.answ-block-3-s
+            p Влажно
+          .butt-answ.answ-block-4-s
+            p Умеренная влажность
 
   footer 
     p made by 
