7 - 8.11.2023 - Написал простой скрипт JS

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -2,6 +2,7 @@ html
   head
     include headCode
     //script(src="js/bgTestIteration.js")
+    script(src="js/mainTerminal.js")
     
     header 
       div.bg-fone-header
