--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -471,6 +471,18 @@ body
 	.butt-answ
 		background color7
 
+#block-a-2-1
+	display none
+
+#block-a-2
+	display none
+
+#block-a-1
+	display none
+
+#block-a
+	display none
+
 // ----------------------------- //
 // 		 Кнопки навигации:	     //
 // ----------------------------- // 
