8 - 8.11.2023 - Начинаю химичить с JS

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -2,7 +2,7 @@ html
   head
     include headCode
     //script(src="js/bgTestIteration.js")
-    script(src="js/mainTerminal.js")
+    //script(src="js/mainTerminal.js")
     
     header 
       div.bg-fone-header
@@ -19,15 +19,10 @@ html
       .butt-all-pants
         //p.sss🪴 
         p Все растения
-
-    //.asd1
-      .h1 
-        a(href="Page_03.html") Галерея мультсериалов
-      .h2 
-        a(href="Page_02.html") Список мультсериалов
     
     // Тут будут все элементы с вопросами
     .main-body 
+
       .descr-qu-1-grad
         .descr-qu-1
           p.pp1 Этот инструмент подберёт для вас <b>самое <i>лучшее</i> растение</b>
@@ -35,6 +30,7 @@ html
           p.pp3 Ну что, вы готовы <b>начинать?</b> 🚀
           div.butt-start
             p Запустить 
+
       .block-qu#block-a
         p.qu-answ Вы будете выращивать растения дома, или на улице?
         p.letter-abbr a
@@ -43,6 +39,7 @@ html
             p Дома
           .butt-answ.answ-block-2
             p На улице
+
       .block-qu#block-a-1
         p.qu-answ Какая наименьшая температура бывает в вашем регионе?
         p.letter-abbr a-1
@@ -52,6 +49,7 @@ html
             input(type='text')
           .butt-answ.answ-block-2
             p Не имеет значения, так как я планирую выращивать растения летом
+
       .block-qu#block-a-2
         p.qu-answ Какая средняя температура в вашем доме?
         p.letter-abbr a-2
@@ -59,6 +57,7 @@ html
           .butt-answ.answ-block-1#block-a-2-butt
             p Введите, в ℃
             input(type='text')
+
       .block-qu#block-a-2-1
         p.qu-answ Какая примерная влажность в вашем доме?
         p.letter-abbr a-2-1
@@ -72,6 +71,7 @@ html
             p Влажно
           .butt-answ.answ-block-4-s
             p Умеренная влажность
+
 
   footer 
     p made by 
