--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -391,12 +391,16 @@ body
 	filter: brightness(135%);
 
 .butt-answ:active
-	//filter: invert(100%);
-	//bord()
 	font-weight: bold
-	//font-style: italic
 	border solid 3px rgb(32, 32, 32)
 	letter-spacing: -0.05em 
+
+.butt-answ.active	// Стиль для JS
+	font-weight: bold;
+	border: solid 3px rgb(32, 32, 32);
+	letter-spacing: -0.05em;
+
+
 
 .butt-answ
 	input
@@ -471,17 +475,17 @@ body
 	.butt-answ
 		background color7
 
-#block-a-2-1
-	display none
+// #block-a-2-1
+// 	display none
 
-#block-a-2
-	display none
+// #block-a-2
+// 	display none
 
-#block-a-1
-	display none
+// #block-a-1
+// 	display none
 
-#block-a
-	display none
+// #block-a
+// 	display none
 
 // ----------------------------- //
 // 		 Кнопки навигации:	     //
