11 - 8.11.2023 - Сделал, но ещё не отладил все блоки

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -3,7 +3,9 @@ html
     include headCode
     //script(src="js/bgTestIteration.js")
     script(src="js/mainTerminal.js")
+
     // Побуквенное появление текста
+    // Автопрокрутки, при появлении нового блока нет
     
     header 
       div.bg-fone-header
