12 - 9.11.2023 - Почти дописал всю логику

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -167,6 +167,15 @@ html
           .butt-answ.answ-block-3
             p До месяца
 
+      .butt-final
+        p Подобрать растения
+
+      .block-request  
+        .req 
+          p Текст запроса: 
+        .answ 
+          p Ответ БД
+
 
   footer 
     p made by 
