14 - 9.11.2023 - Переписываю и чищу код

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -25,6 +25,7 @@ html
     
     // Тут будут все элементы с вопросами
     .main-body 
+      p.main-counter 0
 
       .descr-qu-1-grad
         .descr-qu-1
@@ -33,6 +34,7 @@ html
           p.pp3 Ну что, вы готовы <b>начинать?</b> 🚀
           div.butt-start
             p Запустить 
+          
 
       .block-qu#block-a
         p.qu-answ Вы будете выращивать растения дома, или на улице?
@@ -168,7 +170,7 @@ html
             p До месяца
 
       .butt-final
-        p Подобрать растения
+        span Подобрать растения
 
       .block-request  
         .req 
