--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -3,6 +3,7 @@ html
     include headCode
     //script(src="js/bgTestIteration.js")
     script(src="js/mainTerminal.js")
+    //script(src="js/borderAnibate.js")
 
     // Побуквенное появление текста
     // Автопрокрутки, при появлении нового блока нет
@@ -33,7 +34,7 @@ html
           p Вам нужно будет ответить всего на <u><i>несколько</i></u> вопросов
           p.pp3 Ну что, вы готовы <b>начинать?</b> 🚀
           div.butt-start
-            p Запустить 
+            span Запустить 
           
 
       .block-qu#block-a
@@ -178,6 +179,8 @@ html
         .answ 
           p Ответ БД
 
+      .butt-final-2
+        span Пройти ещё раз
 
   footer 
     p made by 
