17 - 9.11.2023 - Сделал одну форму input

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -52,9 +52,10 @@ html
         .butt-bar
           .butt-answ.answ-block-1.input-butt
             p Введите, в ℃
-            input(type='text')
+            input(type='text').my-input-1
           .butt-answ.answ-block-2
             p Не имеет значения, так как я планирую выращивать растения летом
+        p.err-inp-1 Нужно ввести число, от -20 до 35
 
       .block-qu#block-a-2
         p.qu-answ Какая средняя температура в вашем доме?
@@ -62,7 +63,7 @@ html
         .butt-bar
           .butt-answ.answ-block-1#block-a-2-butt
             p Введите, в ℃
-            input(type='text')
+            input(type='text').my-input-2
 
       .block-qu#block-a-2-1
         p.qu-answ Какая примерная влажность в вашем доме?
@@ -70,7 +71,7 @@ html
         .butt-bar
           .butt-answ.answ-block-1-s.input-butt
             p Введите (от 20 до 90)
-            input(type='text')
+            input(type='text').my-input-3
           .butt-answ.answ-block-2-s
             p Сухо
           .butt-answ.answ-block-3-s
