--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -711,3 +711,16 @@ body
 	.butt-final, .butt-final-2, .block-request  
 		width: 870px
 		//color red
+
+// ----------------------------- //
+// 		   Ошибки ввода:	     //
+// ----------------------------- // 
+
+.err-inp-1, .err-inp-2, .err-inp-3
+	padding 0px
+	margin 0px
+	color red
+	//font-size: lagrer
+	font-weight: bold
+	margin-bottom 3px
+	display: none
