19 - 9.11.2023 - Добавил всплывающую подсказку

--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -439,6 +439,7 @@ body
 	align-items: center;
 	position: relative;
 	margin-bottom 25px
+	position: relative;
 
 #block-a-2-butt
 	display: grid
@@ -480,8 +481,8 @@ body
 	letter-spacing: -0.05em 
 
 .butt-answ.active	// Стиль для JS
-	font-weight: bold;
-	border: solid 3px rgb(32, 32, 32);
+	//font-weight: bold;
+	border: solid 4px rgb(32, 32, 32);
 	letter-spacing: -0.05em;
 
 
@@ -724,3 +725,40 @@ body
 	font-weight: bold
 	margin-bottom 3px
 	display: none
+
+// ----------------------------- //
+// 		  Доп. информация:	     //
+// ----------------------------- // 
+
+.add-info
+	position: absolute;
+	right: 10px;
+	top 10px
+	width 30px
+	height 30px
+	padding: 5px
+	border-radius: 5px
+	background #f0f0f0
+	//position: relative;
+	span
+		font-size: 16px
+
+.add-info:hover
+	background #e6e6e6
+
+.add-info::after 
+	content: 'Сколько дней растения можно не поливать:';
+	display: none;
+
+.add-info:hover::after, .add-info:active::after
+	display: block
+	//color red
+	//bord()
+	position: absolute;
+	top: -45px;
+	right 15px
+	background white
+	border-radius: 7px
+	padding 5px
+	width 200px
+	border solid 2px rgb(175, 175, 175)
