--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -63,7 +63,8 @@ html
         .butt-bar
           .butt-answ.answ-block-1#block-a-2-butt
             p Введите, в ℃
-            input(type='text').my-input-2
+            input(type='text', placeholder='25').my-input-2
+        p.err-inp-2 Нужно ввести число, от 15 до 30
 
       .block-qu#block-a-2-1
         p.qu-answ Какая примерная влажность в вашем доме?
@@ -78,6 +79,7 @@ html
             p Влажно
           .butt-answ.answ-block-4-s
             p Умеренная влажность
+        p.err-inp-3 Нужно ввести число, от 10 до 90
 
       .block-qu#block-b
         p.qu-answ Вы хотите подобрать одно растение, или сразу несколько?
@@ -161,7 +163,8 @@ html
 
       .block-qu#block-h
         p.qu-answ Насколько вы хотите оставлять растения без присмотра?
-        //-> Вот тут добавить дополнительную информацию
+        .add-info 
+          span i
         p.letter-abbr h
         .butt-bar
           .butt-answ.answ-block-1
