--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -102,9 +102,23 @@ html
             p С цветами
 
       .block-qu#block-c-3
-        p.qu-answ Выберете желаемый цвет - один или несколько
+        p.qu-answ Выберете желаемый цвет - один или несколько:
         p.letter-abbr c-3
-        .butt-bar
+        .butt-bar-colors 
+          .color-green.color-s
+          .color-other
+            .color-s#red
+            .color-s#orange
+            .color-s#yellow
+            .color-s#light-blue
+            .color-s#blue
+            .color-s#violet
+            .color-s#pink
+            .color-s#silver
+            .color-s#multicolor
+        p.hhid Подсказка: Не забывайте выбирать зелёный цвет!)
+
+        //.butt-bar
           .butt-answ.answ-block-1
             p Выбор цветов [...]
 
