--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -479,7 +479,7 @@ body
 	border solid 3px rgb(32, 32, 32)
 	letter-spacing: -0.05em 
 
-.butt-answ.active	// Стиль для JS
+.butt-answ.active	// Стиль для JS ----------------------------------------------
 	//font-weight: bold;
 	border: solid 4px rgb(32, 32, 32);
 	letter-spacing: -0.05em;
@@ -761,3 +761,85 @@ body
 	padding 5px
 	width 200px
 	border solid 2px rgb(175, 175, 175)
+
+// ----------------------------- //
+// 		   Выбор цветов:	     //
+// ----------------------------- // 
+
+.butt-bar-colors 
+	//bord()
+	background bg-3
+	border-radius: 12px
+	height 220px
+	padding 5px
+	margin-bottom 30px
+	display: grid
+	grid-template-columns: 70px 1fr
+	grid-template-rows: 170px
+
+.color-other
+	display: grid
+	grid-template-columns: 1fr 1fr 1fr 1fr
+	grid-template-rows: 1fr 1fr 1fr 
+
+.color-s
+	width 50px
+	height 50px
+	border-radius: 10px
+	background #000
+	margin 10px
+
+.color-green 
+	width 50px
+	height 190px
+	border-radius: 10px
+	background #000
+	margin 10px
+
+.color-s.active-2, .color-s:active	
+	border: solid 4px rgb(32, 32, 32);
+
+
+.hhid
+	color gray
+	padding 0px
+	margin-bottom 7px
+
+
+
+#white 
+	background-color: white;
+
+#red 
+	background-color: red;
+
+#orange 
+	background-color: orange;
+
+#yellow 
+	background-color: yellow;
+
+#light-blue 
+	background-color: lightblue;
+
+#blue 
+	background-color: blue;
+
+#violet 
+	background-color: violet;
+
+#pink 
+	background-color: pink;
+
+#silver 
+	background-color: silver;
+
+#burgundy 
+	background-color: rgb(161, 67, 13);
+
+#multicolor 
+	background: conic-gradient( red,orange,yellow,green,blue,indigo,violet, red);
+	
+.color-green
+	background-color: rgb(0, 211, 0)
+
