21 - 9.11.2023 - Добавил выбор цветов

--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -479,7 +479,7 @@ body
 	border solid 3px rgb(32, 32, 32)
 	letter-spacing: -0.05em 
 
-.butt-answ.active	// Стиль для JS ----------------------------------------------
+.butt-answ.active	// Стиль для JS
 	//font-weight: bold;
 	border: solid 4px rgb(32, 32, 32);
 	letter-spacing: -0.05em;
@@ -796,17 +796,6 @@ body
 	background #000
 	margin 10px
 
-.color-s.active-2, .color-s:active	
-	border: solid 4px rgb(32, 32, 32);
-
-
-.hhid
-	color gray
-	padding 0px
-	margin-bottom 7px
-
-
-
 #white 
 	background-color: white;
 
@@ -842,4 +831,3 @@ body
 	
 .color-green
 	background-color: rgb(0, 211, 0)
-
