--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -105,7 +105,7 @@ html
         p.qu-answ Выберете желаемый цвет - один или несколько:
         p.letter-abbr c-3
         .butt-bar-colors 
-          .color-green.color-s
+          .color-green 
           .color-other
             .color-s#red
             .color-s#orange
@@ -115,9 +115,8 @@ html
             .color-s#violet
             .color-s#pink
             .color-s#silver
+            //.color-s#burgundy
             .color-s#multicolor
-        p.hhid Подсказка: Не забывайте выбирать зелёный цвет!)
-
         //.butt-bar
           .butt-answ.answ-block-1
             p Выбор цветов [...]
