22 - 9.11.2023 - Перенёс сбор SQL-запроса из питона

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -26,7 +26,7 @@ html
     
     // Тут будут все элементы с вопросами
     .main-body 
-      p.main-counter 0
+      //p.main-counter 0
 
       .descr-qu-1-grad
         .descr-qu-1
@@ -105,7 +105,7 @@ html
         p.qu-answ Выберете желаемый цвет - один или несколько:
         p.letter-abbr c-3
         .butt-bar-colors 
-          .color-green 
+          .color-green.color-s
           .color-other
             .color-s#red
             .color-s#orange
@@ -115,8 +115,9 @@ html
             .color-s#violet
             .color-s#pink
             .color-s#silver
-            //.color-s#burgundy
             .color-s#multicolor
+        p.hhid Подсказка: Не забывайте выбирать зелёный цвет!)
+
         //.butt-bar
           .butt-answ.answ-block-1
             p Выбор цветов [...]
