24 - 10.11.2023 - Написал и настроил php файлы на подключение к БД

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -2,8 +2,13 @@ html
   head
     include headCode
     //script(src="js/bgTestIteration.js")
-    script(src="js/mainTerminal.js")
+    //script(src="js/mainTerminal.js")
     //script(src="js/borderAnibate.js")
+    //script(src="js/sqlite-test.js")
+    //- script(src="js/sqlite-test-bundle.js")
+    //script(src="js/mysql-test-bundle.js")
+    //script(src="js/bundle.js")
+    script(src="js/GetDBReq-Test.js")
 
     // Побуквенное появление текста
     // Автопрокрутки, при появлении нового блока нет
