--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -1,17 +1,18 @@
 html 
   head
     include headCode
+    script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js")
+
     //script(src="js/bgTestIteration.js")
-    //script(src="js/mainTerminal.js")
+    script(src="js/mainTerminal.js")
     //script(src="js/borderAnibate.js")
     //script(src="js/sqlite-test.js")
-    //- script(src="js/sqlite-test-bundle.js")
+    //script(src="js/sqlite-test-bundle.js")
     //script(src="js/mysql-test-bundle.js")
-    //script(src="js/bundle.js")
-    script(src="js/GetDBReq-Test.js")
+    //script(src="js/bundle.js")    
+    //script(src="js/GetDBReq-Test.js")
 
     // Побуквенное появление текста
-    // Автопрокрутки, при появлении нового блока нет
     
     header 
       div.bg-fone-header
