--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -843,3 +843,118 @@ body
 .color-green
 	background-color: rgb(0, 211, 0)
 
+// ----------------------------- //
+// 		     Загрузка:	         //
+// ----------------------------- // 
+
+.loadd 
+	background rgb(250, 250, 250)
+	border-radius: 15px
+	width 90%
+	margin: auto
+	display: grid;
+	grid-template-rows: auto auto
+	justify-items: center;
+	align-items: center;
+	margin-bottom: 35px
+	padding 20px
+	img
+		box-shadow: none
+	span
+		font-size: 22px
+		padding 7px
+		padding-bottom: 2px
+
+
+// Широкие экраны (десктоп)
+@media (min-width: 950px) 
+	.loadd  
+		width: 870px
+
+// ----------------------------- //
+// 		     Карточки:	         //
+// ----------------------------- // 
+
+.result-cards 
+	//background rgb(255, 255, 255)
+	border-radius: 15px
+	width 90%
+	margin: auto
+	display: grid;
+	grid-template-rows: auto auto
+	justify-items: center;
+	align-items: center;
+	margin-bottom: 35px
+	padding 20px
+	span
+		font-size: 28px
+		padding 15px
+		padding-bottom: 35px
+		text-align: center
+
+// Широкие экраны (десктоп)
+@media (min-width: 950px) 
+	.result-cards  
+		width: 870px
+
+.upper-block-3
+	//bord()
+	display: grid
+	grid-template-columns: 1fr 1fr 1fr
+	justify-items: center;
+	align-items: center;
+	width 77%
+
+.down-block-4
+	//bord()
+	display: grid
+	grid-template-columns: 1fr 1fr 1fr 1fr
+	justify-items: center;
+	align-items: center;
+	width 100%
+
+.card
+	//bord()
+	// width 200px
+	width 90%
+	height 335px
+	margin 15px
+	padding 10px
+	border-radius: 13px
+	box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5)
+	background white
+	display: grid
+	grid-template-rows: 70% 30%
+	justify-items: center;
+	align-items: center;
+	img	
+		box-shadow: none
+		width: 100%
+		height 100%
+	span
+		font-size: 22.5px
+		//bord()
+		width 95%
+		height 90%
+		padding: auto 5px
+		margin auto
+		text-align: center
+		overflow: hidden;
+		line-height: 1;
+		//box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5)
+		//border-radius: 10px
+		vertical-align: middle;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		margin-top 20px
+		//bord()
+
+// Узкие экраны
+@media (max-width: 950px) 
+	.card
+		width 90%
+		height 30vw
+		//border red solid 1px
+		span
+			font-size: 2.3vw;
