29 - 10.11.2023 - Разбираюсь со 2м запросом, с зелёным цветом

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -230,6 +230,10 @@ html
             img(src="img/plant-image/P_07.png")
             span Название растения
 
+      .zero-reauest   
+        .spsp
+          span К сожалению, мы не смогли подобрать для вас растение. Попробуйте указать другие параметры
+
       .block-request  
         .req 
           p Текст запроса: 
