30 - 11.11.2023 - Делаю правильную замену цвета

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -203,6 +203,10 @@ html
         img(src="img/wave-load.gif")
         span Подождите...
 
+      .reauest-2-only-color
+        span Мы не смогли найти растения с таким цветом, и характеристиками, что вы указали. 
+        span Но мы можем показать вам все растения с выбранными вами цветами, вне зависимости от характеритсик:
+
       .result-cards   
         .spsp
           span Вот растения, которые подойдут вам лучше всего:
