--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -875,7 +875,7 @@ body
 // 		     Карточки:	         //
 // ----------------------------- // 
 
-.result-cards, .zero-reauest 
+.result-cards, .zero-reauest
 	//background rgb(255, 255, 255)
 	border-radius: 15px
 	width 90%
@@ -908,7 +908,7 @@ body
 
 // Широкие экраны (десктоп)
 @media (min-width: 950px) 
-	.result-cards, .zero-reauest 
+	.result-cards, .zero-reauest, .reauest-2-only-color
 		width: 870px
 
 .zero-reauest 
@@ -922,6 +922,23 @@ body
 	.spsp
 		span
 			font-size: 2.3vw;
+
+	.reauest-2-only-color
+		span
+			font-size: 2.3vw;
+
+.reauest-2-only-color
+	border-radius: 15px
+	background white
+	width 100%
+	height auto
+	padding 20px
+	margin-bottom 15px
+	span
+		height auto
+		display:  block
+		font-size: 23px
+		padding 10px
 
 .upper-block-3
 	//bord()
