33 - 11.11.2023 - Сделал хорошие стили для кнопочек

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -113,7 +113,7 @@ html
         p.qu-answ Выберете желаемый цвет - один или несколько:
         p.letter-abbr c-3
         .butt-bar-colors 
-          .color-green.color-s
+          .color-green.color-s#green
           .color-other
             .color-s#red
             .color-s#orange
@@ -205,7 +205,7 @@ html
 
       .reauest-2-only-color
         span Мы не смогли найти растения с таким цветом, и характеристиками, что вы указали. 
-        span Но мы можем показать вам все растения с выбранными вами цветами, вне зависимости от характеритсик:
+        span Но мы можем показать вам все растения с выбранными вами цветами, вне зависимости от характеристик:
 
       .result-cards   
         .spsp
