35 - 11.11.2023 - Полностью перебрал код, добавил везед комментарии, выстроил его логически верно

--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -406,6 +406,10 @@ body
 	height auto
 	margin-bottom: 25px
 
+// ----------------------------- //
+// 		 Стили для кнопок:	     //
+// ----------------------------- // 
+
 .butt-answ // Стили для всех кнопок
 	//box-sizing: border-box;
 	//box-sizing: content-box;
@@ -438,8 +442,6 @@ body
 	border: solid 4px rgb(32, 32, 32);
 	letter-spacing: -0.05em;
 
-
-
 .butt-answ
 	input
 		width 90%
@@ -460,7 +462,10 @@ body
 		margin-top 8px
 		padding 0px
 
-// Блоки для отвтеов
+// ----------------------------- //
+// 		 Блоки для ответов:	     //
+// ----------------------------- // 
+
 .answ-block-1
 	grid-column: 1;
 
@@ -495,23 +500,34 @@ body
 	top: -10;
 	left: 0;
 	
+// Стили для хороших и плохих кнопочек
+
+.good-button
+	background rgb(0, 201, 0)
+
+.gerat-button
+	background rgb(226, 226, 0)
+
+.bad-batton
+	background rgb(231, 14, 14)
+
 // Тестово устанавливаю цвета для кнопочек:
 
-#block-a
-	.butt-answ
-		background color4
+// #block-a
+// 	.butt-answ
+// 		background color4
 
-#block-a-1
-	.butt-answ
-		background color5
+// #block-a-1
+// 	.butt-answ
+// 		background color5
 
-#block-a-2
-	.butt-answ
-		background color6
+// #block-a-2
+// 	.butt-answ
+// 		background color6
 
-#block-a-2-1
-	.butt-answ
-		background color7
+// #block-a-2-1
+// 	.butt-answ
+// 		background color7
 
 // #block-a-2-1
 // 	display none
