--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -10,7 +10,7 @@ html
     //script(src="js/mysql-test-bundle.js")
     //script(src="js/bundle.js")    
     //script(src="js/GetDBReq-Test.js")
-    script(src="js/plant-cards.js")
+    //script(src="js/plant-cards.js")
 
     script(src="js/mainTerminal.js")
 
@@ -49,19 +49,19 @@ html
         p.qu-answ Вы будете выращивать растения дома, или на улице?
         p.letter-abbr a
         .butt-bar
-          .butt-answ.answ-block-1
+          .butt-answ.answ-block-1.good-button
             p Дома
-          .butt-answ.answ-block-2
+          .butt-answ.answ-block-2.gerat-button
             p На улице
 
       .block-qu#block-a-1
         p.qu-answ Какая наименьшая температура бывает в вашем регионе?
         p.letter-abbr a-1
         .butt-bar
-          .butt-answ.answ-block-1.input-butt
+          .butt-answ.answ-block-1.input-butt.good-button
             p Введите, в ℃
-            input(type='text').my-input-1
-          .butt-answ.answ-block-2
+            input(type='text', placeholder='от -20 до 35').my-input-1
+          .butt-answ.answ-block-2.gerat-button
             p Не имеет значения, так как я планирую выращивать растения летом
         p.err-inp-1 Нужно ввести число, от -20 до 35
 
@@ -69,23 +69,23 @@ html
         p.qu-answ Какая средняя температура в вашем доме?
         p.letter-abbr a-2
         .butt-bar
-          .butt-answ.answ-block-1#block-a-2-butt
+          .butt-answ.answ-block-1#block-a-2-butt.good-button
             p Введите, в ℃
-            input(type='text', placeholder='25').my-input-2
+            input(type='text', placeholder='от 15 до 30').my-input-2
         p.err-inp-2 Нужно ввести число, от 15 до 30
 
       .block-qu#block-a-2-1
         p.qu-answ Какая примерная влажность в вашем доме?
         p.letter-abbr a-2-1
         .butt-bar
-          .butt-answ.answ-block-1-s.input-butt
+          .butt-answ.answ-block-1-s.input-butt.gerat-button
             p Введите (от 20 до 90)
             input(type='text').my-input-3
-          .butt-answ.answ-block-2-s
+          .butt-answ.answ-block-2-s.bad-batton
             p Сухо
-          .butt-answ.answ-block-3-s
+          .butt-answ.answ-block-3-s.bad-batton
             p Влажно
-          .butt-answ.answ-block-4-s
+          .butt-answ.answ-block-4-s.good-button
             p Умеренная влажность
         p.err-inp-3 Нужно ввести число, от 10 до 90
 
@@ -93,20 +93,20 @@ html
         p.qu-answ Вы хотите подобрать одно растение, или сразу несколько?
         p.letter-abbr b
         .butt-bar
-          .butt-answ.answ-block-1
+          .butt-answ.answ-block-1.gerat-button
             p Одно
-          .butt-answ.answ-block-2
+          .butt-answ.answ-block-2.good-button
             p Несколько
 
       .block-qu#block-c
         p.qu-answ Вы хотите, что бы это растение было с цветами, или без?
         p.letter-abbr c
         .butt-bar
-          .butt-answ.answ-block-1
+          .butt-answ.answ-block-1.bad-batton
             p Без цветов
-          .butt-answ.answ-block-2
+          .butt-answ.answ-block-2.gerat-button
             p Не важно
-          .butt-answ.answ-block-3
+          .butt-answ.answ-block-3.good-button
             p С цветами
 
       .block-qu#block-c-3
@@ -124,7 +124,7 @@ html
             .color-s#pink
             .color-s#silver
             .color-s#multicolor
-        p.hhid Подсказка: Не забывайте выбирать зелёный цвет!)
+        p.hhid Подсказка: Чем больше цветов вы выберете, тем больше будет результатов
 
         //.butt-bar
           .butt-answ.answ-block-1
@@ -134,53 +134,53 @@ html
         p.qu-answ Вы хотите, что бы это растение было плодоносным?
         p.letter-abbr d
         .butt-bar
-          .butt-answ.answ-block-1
+          .butt-answ.answ-block-1.good-button
             p Да
-          .butt-answ.answ-block-2
+          .butt-answ.answ-block-2.gerat-button
             p Не важно
-          .butt-answ.answ-block-3
+          .butt-answ.answ-block-3.bad-batton
             p Нет
 
       .block-qu#block-e
         p.qu-answ Вы будете ставить растения на окне?
         p.letter-abbr e
         .butt-bar
-          .butt-answ.answ-block-1
+          .butt-answ.answ-block-1.good-button
             p Да
-          .butt-answ.answ-block-2
+          .butt-answ.answ-block-2.gerat-button
             p Нет
 
       .block-qu#block-e-1
         p.qu-answ На ваше окно падает прямой солнечный свет?
         p.letter-abbr e-1
         .butt-bar
-          .butt-answ.answ-block-1
+          .butt-answ.answ-block-1.good-button
             p Да
-          .butt-answ.answ-block-2
+          .butt-answ.answ-block-2.gerat-button
             p Иногда
-          .butt-answ.answ-block-3
+          .butt-answ.answ-block-3.bad-batton
             p Очень редко
 
       .block-qu#block-f
         p.qu-answ Для вас важно, что бы растение вырабатывало кислород?
         p.letter-abbr f
         .butt-bar
-          .butt-answ.answ-block-1
+          .butt-answ.answ-block-1.good-button
             p Да, важно
-          .butt-answ.answ-block-2
+          .butt-answ.answ-block-2.gerat-button
             p Было бы неплохо, но это не очень важно
-          .butt-answ.answ-block-3
+          .butt-answ.answ-block-3.bad-batton
             p Мне без разницы на это
 
       .block-qu#block-g
         p.qu-answ Как много пространства под растения, в вашем доме?
         p.letter-abbr g
         .butt-bar
-          .butt-answ.answ-block-1
+          .butt-answ.answ-block-1.bad-batton
             p Очень мало
-          .butt-answ.answ-block-2
+          .butt-answ.answ-block-2.gerat-button
             p Средне
-          .butt-answ.answ-block-3
+          .butt-answ.answ-block-3.good-button
             p Достаточно много
 
       .block-qu#block-h
@@ -189,11 +189,11 @@ html
           span i
         p.letter-abbr h
         .butt-bar
-          .butt-answ.answ-block-1
+          .butt-answ.answ-block-1.bad-batton
             p Ненадолго (на 3-5 дней)
-          .butt-answ.answ-block-2
+          .butt-answ.answ-block-2.gerat-button
             p На 1-2 недели
-          .butt-answ.answ-block-3
+          .butt-answ.answ-block-3.good-button
             p До месяца
 
       .butt-final
