--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -791,28 +791,29 @@ body
 	background-color: white;
 
 #red 
-	background-color: red;
+	background-color: rgb(236, 51, 51);
 
 #orange 
 	background-color: orange;
 
 #yellow 
-	background-color: yellow;
+	background-color: rgb(255, 230, 0);
 
 #light-blue 
-	background-color: lightblue;
+	background-color: rgb(0, 191, 255);
 
 #blue 
-	background-color: blue;
+	background-color: rgb(64, 64, 245);
 
 #violet 
-	background-color: violet;
+	background-color: rgb(195, 0, 255);
 
 #pink 
-	background-color: pink;
+	background-color: rgb(241, 100, 211);
 
 #silver 
-	background-color: silver;
+	//background-color: rgb(206, 206, 206);
+	background: linear-gradient(to bottom left, rgb(206, 206, 206), rgb(182, 182, 182));
 
 #burgundy 
 	background-color: rgb(161, 67, 13);
